--- a/Portfolio/Portfolio.Shared/Layout/NavMenu.razor
+++ b/Portfolio/Portfolio.Shared/Layout/NavMenu.razor
@@ -2,7 +2,7 @@
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Portfolio</a>
+        <a class="navbar-brand" href="">Dev Portfolio</a>
     </div>
 </div>
 
