--- a/Portfolio/Portfolio.Shared/Layout/NavMenu.razor
+++ b/Portfolio/Portfolio.Shared/Layout/NavMenu.razor
@@ -30,10 +30,11 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="aichat">
-                <i class="fas fa-robot me-2"></i> AI Chat
+            <NavLink class="nav-link" href="weather">
+                <i class="fas fa-cloud-sun me-2"></i> Weather
             </NavLink>
         </div>
+
 
     </nav>
 </div>
